# ChangeLog for sys-kernel/genkernel
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.235 2011/01/20 18:03:21 sping Exp $

  20 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel-3.4.11.1.ebuild,
  genkernel-9999.ebuild, genkernel-99999.ebuild:
  Call "make" for live ebuilds only (bug #352250). Then asciidoc is not a build
  time dependency as the man page is shipped with genkernel. Therefore I
  reverted zmedico's previous commit.

  20 Jan 2011; Zac Medico <zmedico@gentoo.org> genkernel-3.4.11.1.ebuild:
  3.4.11.1 calls a2x now, so app-text/asciidoc dep needs to be unconditional.

*genkernel-3.4.11.1 (20 Jan 2011)

  20 Jan 2011; Sebastian Pipping <sping@gentoo.org> -genkernel-3.4.11.ebuild,
  +genkernel-3.4.11.1.ebuild:
  Bump to 3.4.11.1. Closes bug #351906 and #351909

  17 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel-99999.ebuild:
  Add support for MDADM 3.1.4

*genkernel-3.4.11 (16 Jan 2011)

  16 Jan 2011; Sebastian Pipping <sping@gentoo.org> +genkernel-3.4.11.ebuild,
  genkernel-9999.ebuild:
  Bump to 3.4.11, sync 9999 (four nines) live ebuild

  15 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel-99999.ebuild:
  Bump LVM to 2.02.74

  12 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel-99999.ebuild:
  Integrate GnuPG 1.x

  11 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel-99999.ebuild:
  Use e2fsprogs 1.41.14 for experimental branch

  07 Jan 2011; Sebastian Pipping <sping@gentoo.org>
  genkernel-3.4.10.908.ebuild, genkernel-9999.ebuild, genkernel-99999.ebuild:
  Add build dep on asciidoc for live ebuilds

*genkernel-99999 (07 Jan 2011)

  07 Jan 2011; Sebastian Pipping <sping@gentoo.org>
  genkernel-3.4.10.908.ebuild, genkernel-9999.ebuild, +genkernel-99999.ebuild:
  Remove traces of svn, add 99999er ebuild to enable people to test our
  experimental branch
