@@ -1,6 +1,16 @@
 # ChangeLog for sys-kernel/genkernel
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.235 2011/01/20 18:03:21 sping Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.236 2011/01/20 20:21:05 sping Exp $
+
+  20 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel-3.4.11.1.ebuild,
+  genkernel-9999.ebuild, genkernel-99999.ebuild:
+  Fix broken Bash logic (still bug #352250 in a way)
+
+  A: false && true || echo die
+  B: { false && true ; } || echo die
+  C: false && { true || echo die ; }
+
+  Despite basic testing, I wrongly assumed A=C. In contrast, A=B is true.
 
   20 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel-3.4.11.1.ebuild,
   genkernel-9999.ebuild, genkernel-99999.ebuild:
